# dbx_scalable_dl

./: .coveragerc  .dockerignore  .gitignore  Dockerfile.ci-test  Dockerfile.dev  Makefile  README.md  README.rst  dev-requirements.txt  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  unit-requirements.txt
.dbx/: project.json
.eggs/dunamai-1.9.0-py3.8.egg/EGG-INFO/: PKG-INFO  RECORD  requires.txt
.github/workflows/: on-docker-release.yml  onpush.yml  onrelease.yml
conf/: deployment.yml  deployment.yml.j2
conf/params/: data_loader.yml  model_builder.yml  model_builder_mn.yml  model_builder_sn.yml
conf/test/: sample.yml
dbx_scalable_dl/: __init__.py  callbacks.py  common.py  controller.py  data_provider.py  inference.py  metrics_collector.py  model.py  models.py  serialization.py  serving.py  utils.py
dbx_scalable_dl/tasks/: data_loader.py  model_builder.py
docker/: Dockerfile.base  Dockerfile.ci  Dockerfile.dev
nocturne/: __init__.py  callbacks.py  common.py  controller.py  serialization.py  utils.py
nocturne/api/: providers.py  utils.py
nocturne/api/model_builder/: base.py  tensorflow.py
nocturne/tasks/: data_loader.py  model_builder.py
scripts/cloud-watch/: cloud-watch-integration.sh  driver-agent.j2  executor-agent.j2
tests/model/: saved_model.pb
tests/model/variables/: variables.data-00000-of-00001  variables.index
tests/unit/: common.py  conftest.py  e2e_test.py  ganglia_test.py  sample_test.py  serialization_test.py  serving_test.py  tasks_test.py  test_builder.py  test_provider.py
