[tool.poetry]
name = "nocturne"
version = "0.0.1"
description = "Nocturne - utilities for Scalable Deep Learning with Spark, Horovod and Petastorm"
authors = ["Ivan Trusov"]
license = "MIT"
readme = "README.rst"
homepage = ""
repository = "https://github.com/renardeinside/nocturne"
documentation = "https://github.com/renardeinside/nocturne"

keywords = [
    "Deep Learning",
    "Distributed Deep Learning",
    "Apache Spark",
    "Horovod"
]

[tool.poetry.dependencies]
python = ">=3.8"
pyspark = "3.2.1"
delta-spark = "1.1.0"
petastorm = "0.11.4"
tensorflow = {version = "2.8.0", python = "3.8"}
horovod = {extras = ["spark", "tensorflow"], version = "^0.24.2"}

[tool.poetry.dev-dependencies]
dbx = "^0.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
