[tool.poetry]
name = "nocturne"
version = "0.0.1"
description = "Nocturne - utilities for Scalable Deep Learning with Spark, Horovod and Petastorm"
authors = ["Ivan Trusov"]
license = "MIT"
readme = "README.rst"
homepage = ""
repository = "https://github.com/renardeinside/nocturne"
documentation = "https://github.com/renardeinside/nocturne"

keywords = [
    "Deep Learning",
    "Distributed Deep Learning",
    "Apache Spark",
    "Horovod"
]

[tool.poetry.dependencies]
python = ">=3.8"
pyspark = "3.2.1"
delta-spark = "1.1.0"
petastorm = "0.11.4"
tensorflow = {version = "2.8.0", python = "3.8"}
horovod = {extras = ["spark", "tensorflow"], version = "^0.24.2"}

[tool.poetry.dev-dependencies]
dbx = "^0.4.1"
pytest = "^7.1.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
/(
  | build
)/
'''

[tool.pytest.ini_options]
addopts = "-s -p no:warnings"
log_cli = 1
log_cli_level = "INFO"
log_cli_format = "[pytest][%(asctime)s][%(levelname)s][%(module)s][%(funcName)s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_level = "INFO"